tests/errors/var-modified-on-rhs.ja
procedure main()
    int x
    x += x
